fix: rename WithData -> WithSingleData rename the function in order to shorten the model name in Swagger UI. It was "rocky.my.id_git_h8-assignment-2_http_responses.WithData-models_Order" and now it's just "responses.WithSingleData-models_Order". It seems that there is naming conflict somewhere else in the dependencies that causes swaggo to behave like that.
