# api/orders/controllers/get.go
@@ -13,7 +13,7 @@ import (
 // @Tags        orders
 // @Produce     json
 // @Param       id  path     int true "Order ID"
-// @Success     200 {object} responses.WithData[models.Order]
+// @Success     200 {object} responses.WithSingleData[models.Order]
 // @Failure     404 {object} responses.Error
 // @Failure     500 {object} responses.Error
 // @Router      /orders/{id} [get]
@@ -38,7 +38,7 @@ func (controller OrderController) GetById(context *gin.Context) {
 
 	context.JSON(
 		http.StatusOK,
-		responses.WithData[models.Order]{
+		responses.WithSingleData[models.Order]{
 			Data:   order,
 			Status: "found",
 		},
